<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyFitnessJourney</string>
    <string name="myfitnessjourney_title">myfitnessjourney</string>
    <string name="myfitnessjourney_motto">your fitness journey matters</string>
    <string name="login_email_hint">your email here</string>
    <string name="login_password_hint">you password here</string>
    <string name="log_in">log in</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="current_weight_desc">Current weight:</string>
    <string name="goal_weight_desc">Goal weight:</string>
    <string name="goal_date_desc">Goal date:</string>
    <string name="time_remaining_desc">Time remaining:</string>
    <string name="weight_label">WEIGHT</string>
    <string name="weight_enter_hint">Enter your current weight</string>
    <string name="picture_label">PICTURE</string>
    <string name="picture_enter_hint">Take a picture or choose from gallery</string>
    <string name="your_photo_hint">Your photo</string>
    <string name="wizard_text_1">
        We are glad you found your way here. Treight combines the good old weight tracking journal by entering your weight every time you weigh youself
        with a little twist to it, from now on, everytime you weigh youself, you take a picture of you body, preferably in the mirror.
    </string>

    <string-array name="views">
        <item>Home/My Profile</item>
        <item>My Journey</item>
        <item>Settings</item>
    </string-array>

    <string-array name="metrics">
        <item>Pounds(lbs)</item>
        <item>Kilograms(Kg)</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="weighin_list_fragment_title">My Journey</string>
    <string name="title_activity_weigh_in_detail">WeighInDetailActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">testActivity</string>
    <string name="title_activity_journey_tab">JourneyTabActivity</string>

    <!-- Toolbar titles -->
    <string name="title_weighins">Your weighins</string>
    <string name="title_goal">Your goal</string>
    <string name="title_alarm">Your weighin schedule</string>
    <string name="title_newWeighin">New weighin</string>
    <string name="title_newAlarm">Schedule a new weighin</string>

    <string name="message_removeAlarm">Remove this scheduled weighin?</string>
    <string name="message_unscheduleAlarm">Unschedule this weighin?</string>
    <string name="message_reschduleAlarm">Reschedule this weighin?</string>

    <string name="new_weighin_tag_fragment">FRAGMENT_1A</string>
    <string name="weighin_list_tag_fragment">FRAGMENT_2A</string>
    <string name="goal_list_tag_fragment">FRAGMENT_3A</string>
    <string name="new_goal_tag_fragment">FRAGMENT_1B</string>
    <string name="schedule_list_tag_fragment">FRAGMENT_2B</string>
    <string name="new_schedule_tag_fragment">FRAGMENT_3B</string>
    <string name="weighin_detail_tag_fragment">FRAGMENT_4A</string>




</resources>
